# repository-template-python

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATTION.cff  README.md  justfile  pyproject.toml
.github/workflows/: normal.yaml
notebooks/: notebook.ipynb
src/mymodule/: cli.py
tests/: test_version.py
tools/ci/: general.sh
tools/configs/copier/answers/: generic.yaml  python.yaml
tools/configs/git-cliff/: config.toml
tools/just/: changelog.just
tools/nix/: flake.nix
tools/nix/lib/: lib.parts.nix  shell.nix
tools/nix/lib/devenv/: README.md
tools/nix/shells/: default.parts.nix  general.parts.nix  toolchain-python.nix  toolchain.nix
tools/nix/toolchains/: toolchain-general.nix  toolchain-python.nix
tools/scripts/: setup-config-files.sh  setup.sh
